syntax = "proto3";
option go_package = "common";
package common;

enum ErrorCode {
    OK     = 0;
    FAILED = 1;
}
