syntax = "proto3";
option go_package = "user_center";
package user_center;

import "proto/common.proto";


message LoginReq {
	string kid    = 1;
	string macKey = 2;
}

message TapInfo {
	string avatar  = 1;
	string gender  = 2;
	string name    = 3;
	string openid  = 4;
	string unionid = 5;
}

message TapBaseInfo {
	TapInfo data    = 1;
	int64   now     = 2;
	bool    success = 3;
}

message LoginRsp {
	common.ErrorCode code       = 1;
	string           msg        = 2;
	string           serverAddr = 3;
	int32            serverPort = 4;
	TapInfo          tapInfo    = 5;
}